// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolTip.vue should render correctly with default options 1`] = `
<div
  class="c-tooltip"
>
  
  
  <inline-svg-stub
    aria-hidden="true"
    class="c-tooltip__icon"
    keepduringloading="true"
    src=""
    transformsource="[Function]"
  />
  <q-tooltip-stub
    class="c-tooltip__tooltip"
    model-value="false"
    transition-hide="scale"
    transition-show="scale"
  >
    
    <div
      class="c-tooltip__text-container"
    >
      
      
      <span
        class="c-tooltip__text"
      >
        Test
      </span>
    </div>
    
  </q-tooltip-stub>
</div>
`;

exports[`ToolTip.vue should render correctly with default options 2`] = `
<div
  class="c-tooltip"
>
  
  
  <inline-svg-stub
    aria-hidden="true"
    class="c-tooltip__icon"
    keepduringloading="true"
    src=""
    transformsource="[Function]"
  />
  <q-tooltip-stub
    class="c-tooltip__tooltip"
    model-value="false"
    transition-hide="scale"
    transition-show="scale"
  >
    
    <div
      class="c-tooltip__text-container"
    >
      
      <div
        class="c-tooltip__warning-container"
      >
        <inline-svg-stub
          aria-hidden="true"
          class="c-tooltip__icon c-tooltip__icon--warning"
          keepduringloading="true"
          src=""
          transformsource="[Function]"
        />
        <span
          class="c-tooltip__text"
        >
          test
        </span>
      </div>
      <div
        class="c-tooltip__warning-container"
      >
        <inline-svg-stub
          aria-hidden="true"
          class="c-tooltip__icon c-tooltip__icon--warning"
          keepduringloading="true"
          src=""
          transformsource="[Function]"
        />
        <span
          class="c-tooltip__text"
        >
          test2
        </span>
      </div>
      
      <span
        class="c-tooltip__text"
      >
        Test
      </span>
    </div>
    
  </q-tooltip-stub>
</div>
`;

exports[`ToolTip.vue should render correctly with hidden icon 1`] = `
<div
  class="c-tooltip"
>
  
  
  <!--v-if-->
  <q-tooltip-stub
    class="c-tooltip__tooltip"
    model-value="false"
    transition-hide="scale"
    transition-show="scale"
  >
    
    <div
      class="c-tooltip__text-container"
    >
      
      
      <span
        class="c-tooltip__text"
      >
        Test
      </span>
    </div>
    
  </q-tooltip-stub>
</div>
`;

exports[`ToolTip.vue should render correctly with something in its slot 1`] = `
<div
  class="c-tooltip c-tooltip--dynamic-size"
>
  
  slot content
  
  <inline-svg-stub
    aria-hidden="true"
    class="c-tooltip__icon"
    keepduringloading="true"
    src=""
    transformsource="[Function]"
  />
  <q-tooltip-stub
    class="c-tooltip__tooltip"
    model-value="false"
    transition-hide="scale"
    transition-show="scale"
  >
    
    <div
      class="c-tooltip__text-container"
    >
      
      
      <span
        class="c-tooltip__text"
      >
        Test
      </span>
    </div>
    
  </q-tooltip-stub>
</div>
`;
